fixed submenus on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2720,7 +2720,7 @@ ol {
 @media only screen and (min-width: 768px) and (max-width: 991px), (max-width: 767px) {
   .navbar-nav .nav-item a.dd-menu::after {
     top: 18px;
-    right: 0;
+    right: 50px; /* needed to make submenus arrows display correctly */
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
   }
